--- a/NclearOS2/NclearOS2/NclearOS2.csproj
+++ b/NclearOS2/NclearOS2/NclearOS2.csproj
@@ -20,6 +20,7 @@
         <RemoveBootDebugOutput>True</RemoveBootDebugOutput>
         <DebugEnabled>False</DebugEnabled>
         <VMWareEdition>Player</VMWareEdition>
+        <CompressionType>Gzip</CompressionType>
     </PropertyGroup>
 
     <ItemGroup>
